--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -1,27 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../stylesheets/style.css" />
     <link rel="icon" href="/favicon.ico" />
     <title>Sign In</title>
   </head>
   <body>
-    <form action="/auth/sign-in" method="POST" class="">
-      <h1>Welcome</h1>
+    <form action="/auth/sign-in" method="POST" class="sign-up-form">
+      <h1
+        style="
+          font-size: 25px;
+          color: black;
+          text-align: center;
+          margin-top: 45px;
+        "
+      >
+        Welcome
+      </h1>
       <!-- Hidden input for CSRF token -->
       <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
-      <div class="sign-up-form">
-        <div class="form-grid-auth">
+
+      <div class="form-grid-auth">
+        <div class="grid-item-auth">
           <label for="username">Username:</label>
           <input type="text" name="username" id="username" required />
+        </div>
 
+        <div class="grid-item-auth">
           <label for="password">Password:</label>
           <input type="password" name="password" id="password" required />
         </div>
+
+        <div class="grid-item-auth">
+          <button type="submit" class="submit-btn">Sign In</button>
+        </div>
       </div>
-      <button type="submit" class="submit-btn">Sign In</button>
     </form>
   </body>
 </html>
