--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,10 +1,13 @@
 <nav class="navbar">
   <ul>
+    <% if (user) { %>
     <li><a href="/goodCatch/new">Create New</a></li>
     <li><a href="/goodCatch/dashboard">List by Category</a></li>
     <li><a href="/goodCatch">Edit and Delete</a></li>
+    <li><Link to='/' onClick={handleSignOut}>Sign Out</Link></li>
+    <% } else { %>
     <li><a href="/auth/sign-in">Sign In</a></li>
     <li><a href="/auth/sign-up">Sign Up</a></li>
-    <li><a href="/auth/sign-out">Sign Out</a></li>
+    <% } %>
   </ul>
 </nav>
