all finished, confirming requirements met

--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -4,7 +4,9 @@
     <li><a href="/goodCatch/new">Create New</a></li>
     <li><a href="/goodCatch/dashboard">List by Category</a></li>
     <li><a href="/goodCatch">Edit and Delete</a></li>
-    <li><Link to='/' onClick={handleSignOut}>Sign Out</Link></li>
+    <li><a href='/goodCatch/search-form'>Search</a></li>
+    <li><a href="/auth/sign-out">Sign Out</a></li>
+
     <% } else { %>
     <li><a href="/auth/sign-in">Sign In</a></li>
     <li><a href="/auth/sign-up">Sign Up</a></li>
