--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,22 +46,21 @@ body {
 
 .centered-text {
   color: white;
-  position: relative;
-  top: 9vh;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
+  position: absolute;
+  top: 80%;
+  left: 10%;
+
   font-size: 3rem;
-  z-index: 10;
+  margin: 0 auto;
 }
 .subheader {
   position: fixed;
-  top: 45vh;
+  top: 65vh;
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
   font-size: 3rem;
-  color: #230e0e;
+  color: #fcfcfc;
   z-index: 10;
 }
 .sign-up-form {
@@ -419,7 +418,7 @@ dver {
 }
 
 .signup-link {
-  top: 66.3vh;
+  top: 13.3vh;
   margin-left: 55%;
   transform: translateX(-45%);
   position: relative;
@@ -452,13 +451,18 @@ dver {
   background-color: #f9f9f9;
   text-align: center;
   cursor: pointer;
-  position: relative;
-  margin: 0;
-  transform: none;
 }
 
 .signin2-link {
-  top: 66.3vh;
+  position: absolute;
+  top: 85%;
+  left: 55%;
+}
+
+.signup-link {
+  position: absolute;
+  top: 45%;
+  left: 3.5%;
 }
 
 .signup-link:hover,
