--- a/views/goodCatches/list.ejs
+++ b/views/goodCatches/list.ejs
@@ -42,7 +42,13 @@
     </style>
   </head>
   <body>
-    <%- include("../partials/_navbar.ejs") %>
+    <%- include("../partials/_navbar.ejs") %> <% if (searchTerm) { %>
+    <p>Search results for: "<%= searchTerm %>"</p>
+    <% } %>
+    <% if (searchTerm) { %>
+      <p>Showing results for: "<%= searchTerm %>"</p>
+    <% } %>
+    
     <div class="dashboard-page">
       <div class="dashboard-header-grid">
         <h1>GoodCatch List for <%= user.username %></h1>
@@ -129,6 +135,8 @@
               alert("Network error during delete.");
             }
           }
+
+   
         }
       });
     </script>
