--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -8,7 +8,8 @@
     <title>Sign In</title>
   </head>
   <body>
-    <form action="/auth/sign-in" method="POST" class="sign-up-form">
+    <h1 class="h1-sign">Sign In</h1>
+    <form action="/auth/sign-in" method="POST" class="">
       <h1
         style="
           font-size: 25px;
