--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -9,7 +9,8 @@
     <title>Sign Up</title>
   </head>
   <body>
-    <h1>Sign Up</h1>
+    <h1 class="h1-sign">Sign Up</h1>
+
     <form action="/auth/sign-up" method="POST" class="">
       <!-- Hidden input for CSRF token -->
       <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
