--- a/views/goodCatches/search-form.ejs
+++ b/views/goodCatches/search-form.ejs
@@ -7,14 +7,14 @@
   </head>
   <body>
     <%- include("../partials/_navbar.ejs") %>
-    <div class="form-container">
-      <h1>Create a New GoodCatch</h1>
+    <div class="form-container-search">
+      <h1 class="h1-search">Select Your Search Criteria</h1>
       <form action="/goodCatch/search" method="GET">
-        <div class="data-grid">
-          <div class="data-grid-item">
+        <div class="data-grid-search">
+          <div class="data-grid-item-search">
             <label for="site">Site</label>
             <select id="site" name="site">
-              <option value="">Select a site OR leave blank</option>
+              <option value="">Select OR leave blank</option>
               <option value="Baldwin Park">Baldwin Park</option>
               <option value="Carpinteria">Carpinteria</option>
               <option value="Boston">Boston</option>
@@ -22,10 +22,10 @@
               <option value="Minnetonka">Minnetonka</option>
             </select>
           </div>
-          <div class="data-grid-item">
+          <div class="data-grid-item-search">
             <label for="department">Department</label>
             <select id="department" name="department">
-              <option value="">Select a department OR leave blank</option>
+              <option value="">Select OR leave blank</option>
               <option value="Warehouse">Warehouse</option>
               <option value="Shop Floor">Shop Floor</option>
               <option value="HR">HR</option>
@@ -33,17 +33,20 @@
               <option value="Front Office">Front Office</option>
             </select>
           </div>
-          <div class="data-grid-item">
+          <div class="data-grid-item-search">
             <label for="category">Category</label>
             <select id="category" name="category">
-              <option value="">Select a category OR leave blank</option>
+              <option value="">Select OR leave blank</option>
               <option value="Slip and Fall">Slip and Fall</option>
               <option value="Toxic Spill">Toxic Spill</option>
               <option value="Unsafe Storage">Unsafe Storage</option>
               <option value="Equipment Failure">Equipment Failure</option>
             </select>
           </div>
-          <button type="submit">Search</button>
+        
+            <div style="text-align: center;">
+            <button class="defButton" type="submit">Search</button>
+            </div></div>
         </div>
       </form>
     </div>
