--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,18 +6,35 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <title>Home Page</title>
   </head>
-  <body class="index-body">
-    <!-- Background box -->
-    <div class="colorBack"></div>
-
-    <h1 class="centered-text">HSE Event Tracker</h1>
-    <h2 class="subheader">Welcome</h2>
+  <body>
     <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
-    <p>
-      <div class="buttonContainer">
-      <a class="signup-link" href="/auth/sign-up">Sign up</a>
-      <a class="signin2-link" href="/auth/sign-in">Sign in</a>
+    <h1 class="h1-index">HSE Event Tracker</h1>
+ 
+    <div class="index-grid">
+      <div class="index-grid-item"></div>
+      <div class="index-grid-item">Health</div>
+      <div class="index-grid-item">Safety</div>
+      <div class="index-grid-item">Environment</div>
+      <div class="index-grid-item"></div>
+      <div class="index-grid-item"></div>
+      <!-- <div class="index-grid-item">Col 2, Row 2</div> -->
+      <div class="index-grid-item"></div>
+      <div class="index-grid-item"></div>
+      <div class="index-grid-item"></div>
+      <div class="index-grid-item">HR</div>
+      <div class="index-grid-item">Customer Service</div>
+      <!-- <div class="index-grid-item">Col 3, Row 3</div> -->
+      <div class="index-grid-item">Shop Floor</div>
+      <div class="index-grid-item">Warehouse</div>
+      <div class="index-grid-item"></div>
+      <div class="index-grid-item">Safe Work</div>
+      <div class="index-grid-item">Healthy Life</div>
+      <div class="index-grid-item">Sustainable Future</div>
+      <div class="index-grid-item"></div>
+
+      <a class="index-defButton1" href="/auth/sign-up">Sign up</a>
+      <a class="index-defButton2" href="/auth/sign-in">Sign in</a>
     </div>
-    </p>
   </body>
 </html>
+`
