--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -26,7 +26,7 @@
         </div>
 
         <div class="grid-item-auth">
-          <button type="submit" class="submit-btn">Sign In</button>
+          <button type="submit" class="defButton">Sign In</button>
         </div>
       </div>
     </form>
