--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -34,7 +34,7 @@
           </div>
         </div>
 
-        <button type="submit" class="submit-btn">Sign Up</button>
+        <button type="submit" class="defButton">Sign Up</button>
       </div>
     </form>
   </body>
