--- a/views/goodCatches/dashboard.ejs
+++ b/views/goodCatches/dashboard.ejs
@@ -12,7 +12,7 @@
     <%- include("../partials/_navbar.ejs") %>
     <div class="dashboard-page">
       <div class="dashboard-header-grid">
-        <h1 class="h1-dashboard">Welcome, <%= user.username %></h1>
+        <h1 class="h1-dashboard"><%= user.username %></h1>
         <h2 class="h2-dashboard">GoodCatch by Category</h2>
       </div>
 
