--- a/views/goodCatches/list.ejs
+++ b/views/goodCatches/list.ejs
@@ -56,9 +56,9 @@
                 </button>
               </form>
             </div>
-            <p>Record ID: <%= catchItem._id %></p>
+            <!-- <p>Record ID: <%= catchItem._id %></p>
             <% catchItem.events.forEach(event => { %>
-            <p>Event ID: <%= event._id %></p>
+            <p>Event ID: <%= event._id %></p> -->
             <% }); %>
           </div>
           <% }); %>
@@ -126,7 +126,7 @@
 
         setTimeout(() => {
           msgDiv.remove();
-        }, 2000);
+        }, 3000);
       }
     </script>
   </body>
